<resources>
    <string name="app_name">Suporte CEFD</string>

    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->

    <!-- Classe db.Contract-->
    <!-- ItemService -->
    <string name="service_table_name">Service</string>
    <string name="col_patrimony">patrimony</string>
    <string name="col_local">local</string>
    <string name="col_tyoe">type</string>
    <string name="col_description">description</string>
    <string name="col_responsible">responsible</string>
    <string name="col_entrydate">entrydate</string>
    <string name="col_releasedate">releasedate</string>
    <string name="col_status">status</string>

    <!-- ItemPerson-->
    <string name="person_table_name">Person</string>
    <string name="col_name">name</string>
    <string name="col_telephone">telephone</string>
    <string name="col_email">email</string>
    <string name="col_password">password</string>
    <string name="col_type">type</string>



    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
    <!-- Class main.LoginActivity -->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha"</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_email_or_password">Email ou senha inválidos!</string>
    <string name="sp_user">user</string>
    <string name="sp_email">email</string>
    <string name="sp_password">password</string>
    <string name="sp_remember">remember</string>
    <string name="sp_logged">logged</string>
    <string name="sp_person">person</string>
    <string name="net_error">Erro ao fazer login. Verifique sua conexão com a Internet.</string>


    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->

    <!-- Class main.List -->
    <!-- Service Status -->
    <string name="ls_active">active</string>
    <string name="ls_inactive">inactive</string>
    <string name="ls_all">all</string>

    <!-- Activity Extras -->
    <string name="lsx_person">person</string>
    <string name="lsx_service">service</string>
    <string name="lsx_id">id</string>

    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->

    <!-- Class main.NewService -->
    <!--tipos de equipamento -->
    <string name="t_desktop">"Desktop"</string>
    <string name="t_notebook">"Notebook"</string>
    <string name="t_monitor">"Monitor"</string>
    <string name="t_impressora">"Impressora"</string>
    <string name="t_network">"Rede"</string>
    <string name="t_outro">"Outro"</string>

    <string name="ns_success">Serviço cadastrado com sucesso!</string>
    <string name="ns_suject">[CEFD #%07d] Novo Chamado SUPORTE CEFD</string>
    <string name="ns_sendmail">sendemail</string>

    <!-- Menus-->
    <string name="title_activity_menu">Menu Principal</string>
    <string name="t_cadastrar_servico">Cadastrar Serviço</string>
    <string name="t_listar_servico">Listar Serviços</string>
    <string name="t_cadastrar_usuario">Cadastrar Usuário</string>

    <!-- NewUser -->
    <string name="u_name">Nome</string>
    <string name="u_tele">Telefone</string>
    <string name="u_email">Email</string>
    <string name="u_password">Senha</string>
    <string name="u_repeatpass">Repetir Senha</string>
    <string name="u_neq_password">Senhas devem ser iguais!</string>


    <!-- Class List -->
    <string name="lst_all">Todos</string>
    <string name="lst_active">Abertos</string>
    <string name="lst_inactive">Fechados</string>


    <!-- Texts e labels -->
    <string name="t_patrimonio">"Patrimônio"</string>
    <string name="t_local">"Local"</string>
    <string name="t_responsavel">"Responsável"</string>
    <string name="t_telefone">"Telefone"</string>
    <string name="l_tipo">Tipo</string>
    <string name="t_cadastrar">Cadastrar</string>
    <string name="t_descricao">Descrição do Problema</string>
    <string name="t_empty">Nenhum Serviço Cadastrado</string>
    <string name="t_email">"Email"</string>
    <string name="closeservice">Fechar Serviço</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_editar">Editar</string>
    <string name="search_title">"Pesquisar Serviço"</string>

    <!-- WebService -->
    <string name="wsurl">http://192.168.0.184/service.php</string>

</resources>

