<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:showIn="@layout/activity_fullservice"
    tools:context=".utils.adapter.FullService">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/i_ftipo"
            android:src="@drawable/suporte_logo1"
            android:contentDescription="type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="XXXXXX"
                android:paddingLeft="32dp"
                android:textStyle="bold"
                android:id="@+id/l_fpatrimonio"
                android:layout_gravity="center"
                android:textAlignment="center" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/icon_st"
                android:src="@drawable/ic_status_ok_24dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Local:"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/textView"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/txlocal"
            android:text="Local"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Responsável:"
            android:textStyle="bold"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txresponsavel"
            android:text="Responsável"
            android:enabled="false"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Telefone:"
            android:textStyle="bold"
            android:id="@+id/f_tel"
            android:layout_gravity="center"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtel"
            android:text="@string/t_telefone"
            android:enabled="false"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Email:"
            android:textStyle="bold"
            android:id="@+id/txemail"
            android:layout_gravity="center"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txemail1"
            android:text="@string/t_email"
            android:enabled="false"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="Descrição:"
            android:textStyle="bold"
            android:id="@+id/textView4"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txdescricao"
            android:text="Descrição"
            android:enabled="false"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="Data de Entrada:"
            android:textStyle="bold"
            android:id="@+id/t_data1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingLeft="24dp"
            android:layout_marginRight="10dp"
            android:text="4 Jul 2001 12:08"
            android:id="@+id/t_data"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="Data de Conclusão:"
            android:textStyle="bold"
            android:id="@+id/t_data2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:layout_marginRight="10dp"
            android:text="4 Jul 2001 12:08"
            android:id="@+id/t_datas"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:id="@+id/editbutton"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closeservice"
            android:id="@+id/closebutton"
            android:onClick="closeService"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
    </LinearLayout>

</LinearLayout>
